fixed null filtering